<resources>
    <string name="app_name">SIC</string>
    <string name="as_you_have">"As You Have Chosen Automated Biometric Identity Verification For Authentication Method, Please Read The Following Conditions Very Carefully And Proceed Only If You Have Fully Understood And Agreed With The Conditions.  If You Do Not Agree With The Processing Of Your Biometric Personal Data (Your Facial Image) And The Making Of Automated Decisions Based On This Data For Identification Purposes, Please Choose Another Authentication Method For Registration.  Please Be Aware That You Have The Right To Withdraw Your Consent At Any Time. Note That As Trust Service Provider We Are Under Legal Obligation To Store Your Personal Data Within The Period Prescribed In The Law.  - I Confirm That I Am At Least 18 Years Old.  - <b> I Confirm That Mobile-Id May Process My Biometric Personal Data (Facial Image) And Carry Out Automated Decision-Making Based On This Data To Identify Me For Remote Signing Account Registion Purposes.  - I Confirm That Mobile-Id May Perform Verification Based On My Biometric Personal Data In Order To Ensure The Security Of My Electronic Identity And Test The Quality Of The Technical Solutions That Are Used.</b>  Should you have any questions relating to the processing of your personal data, please do not hesitate to contact us.  Mobile-id technologies and service jsc (data controller, hereafter mobile-id).  Address: 19 Dang Tien Dong Street, An Phu ward, district 2, Ho Chi Minh city, Vietnam.  Tax code: 0313994173  Email: info@mobile-id.vn  Hotline: 1900 6884 "</string>
    <string name="prompt_selfcare_term">Terms And Conditions For Use Of Certificates Of Qualified Remote Signing</string>
    <string name="i_agree_that">I Agree That My Personal Data Which I Have Presented Is Used For Generating My Remote Signing Account And Certificates. I Agree That My Remote Signing Account And Certificates Are Used To Identify Me In E-Services And In Electronic Signatures.  I Am Aware That By Entering My Pincode/Tapping My Fingerytip Either For Authentication Of For Creating Electronic Signatures.  - I Verify That I Have Initiated A Session, Agree With It And That I Am Responsible For Its Conesequences.  - I Verify That I Have Made Sure That The Verification Code Sent To Me, Is Correct.  - I Allow My Name And Personal Code To Be Sent To The E-Service Provider.  I Am Also Aware That If I Have Lost My Device Or My Pincodes Have Become Known To Third Parties, I Am Obliged To Immediately Revoke My Remote Signing Certificates.   Information On Deleting Remote Signing Account Or Revocation Of The Certificates Is Available At Https://Rssp.Mobile-Id.Vn  I Am Aware That Use Of The Remote Signing Application Is Described In The Remote Signing End-User License Agreement.  Full Version Of The Terms And Conditions On The Use Of The Remote Signing Certificates Is Available At Https://Rssp.Mobile-Id.Vn/Term  Full Version Of The End-User License Agreement Is Available At Https://Rssp.Mobile-Id.Vn/Faq  I Am Aware That By Choosing<b> \'I Agree\' </b> I confirm that i am familiar and agree with the terms and conditions on the use of remote signing certificates and with the remote signing end-user license agreement.</string>
    <string name="prompt_consent_to_process">Consent To Process Personal Data Via Automated Biometric Identity Verification</string>
    <string name="prompt_register_ca_bi_step_4_1">How Can We Reach You?</string>
    <string name="prompt_how_can_we_reach_you_detail">Please Enter Your Phone Number And Email Address In Case We Need To Contact You</string>
    <string name="hind_register_phone_number">Phone Number</string>
    <string name="hind_register_email">Email Address</string>
    <string name="enter_active">Enter Activation Code Sent To Your Phone</string>
    <string name="you_don_t_h">You Don\'T Have Any Account?<b> Register Now</b></string>
    <string name="prompt_register_ca_bi_step_1_1">Consent To Process Personal Data Via Automated Biometric Identity Verification</string>
    <string name="prompt_register_ca_bi_step_1_2">As You Have Chosen Automated Biometric Identity Verification For Authentication Method, Please Read The Following Conditions Very Carefully And Proceed Only If You Have Fully Understood And Agreed With The Conditions. \N\Nif You Do Not Agree With The Processing Of Your Biometric Personal Data (Your Facial Image) And The Making Of Automated Decisions Based On This Data For Identification Purposes, Please Choose Another Authentication Method For Registration. \N\Nplease Be Aware That You Have The Right To Withdraw Your Consent At Any Time. Note That As Trust Service Provider We Are Under Legal Obligation To Store Your Personal Data Within The Period Prescribed In The Law No. Screenshot Description.\N\N<b>- I Confirm That I Am At Least 18 Years Old\N\N- I Confirm That Mobile-Id May Process My Biometric Personal Data (Facial Image) And Carry Out Automated Decision-Making Based On This Data To Identify Me For Remote Signing Account Registion Purposes.\N\N - I Confirm That Mobile-Id May Perform Verification Based On My Biometric Personal Data In Order To Ensure The Security Of My Electronic Identity And Test The Quality Of The Technical Solutions That Are Used.</b>\n\nShould you have any questions relating to the processing of your personal data, please do not hesitate to contact us.\n\nMobie-id technologies and service jsc (data controller, hereafter "mobile-id").\n\n<b>Address:</b> 19 Dang Tien Dong Street, An Phu ward, district 2, Ho Chi Minh city, Vietnam.\n\nTax code: 0313994173\n\n<b>Email:</b> info@mobile-id.vn\n\n<b>Hotline:</b> 1900 6884</string>
    <string name="prompt_register_ca_bi_step_2_2">I Agree That My Personal Data Which I Have Presented Is Used For Generating My Remote Signing Account And Certificates.I Agree That My Remote Signing Account And Certificates Are Used To Identify Me In E-Services And In Electronic Signatures.\N\N I Am Aware That By Entering My Pincode/Tapping My Fingerytip Either For Authentication Of For Creating Electronic Signatures.\N\N - I Verify That I Have Initiated A Session, Agree With It And That I Am Responsible For Its Conesequences.\N\N - I Verify That I Have Made Sure That The Verification Code Sent To Me, Is Correct.\N\N - I Allow My Name And Personal Code To Be Sent To The E-Service Provider I Am Also Aware That If I Have Lost My Device Or My Pincodes Have Become Known To Third Parties, I Am Obliged To Immediately Revoke My Remot Signing Ceritificates.\N\N Information On Deleting Remote Signing Account Or Revocation Of The Certificates Is Available At Https://Rssp.Mobile-Id.Vn \N\N I Am Aware That Use Of The Remote Signing Application Is Described In The Remote Signing End-User License Agreement.\N\N Full Version Of The Terms And Conditions On The Use Of The Remote Signing Certificates Is Available At Https://Rssp.Mobile-Id.Vn/Terms \N\N Full Version Of The End-User License Agreement Is Available At Https://Rssp.Mobile-Id.Vn/Privacy \N\N I Am Aware That By Choosing \'I Agree\' I Confirm That I Am Familiar And Agree With The Terms And Conditions On The Use Of Remote Signing Certificates And With The Remote Signing End-User License Agreement. \N\N</string>
    <string name="promt_ready_to_scan">Ready To Scan</string>
    <string name="prompt_person_existed">The Person Is Already Registered</string>
    <string name="prompt_username_existed">The Username Is Already Registered</string>
    <string name="prompt_attribute_require">Mandatory Information</string>
    <string name="prompt_optional_information">Optional Information</string>
    <string name="hint_full_name">Full Name</string>
    <string name="select_type">1. Select Type Of Identity Document \N2. Capture The Sides Of Identification Card \N3. Add Personal Information \N4. Add Information</string>
    <string name="prompt_capture_code">1. Capture The Mrz Code Of Your Id Document</string>
    <string name="prompt_scan_nfc">2. Scan Your Identity Document By Holding Your Smart Device Against It</string>
    <string name="prompt_scan_face">3. Scan Your Face For Comparison With Your Id Document Photo</string>
    <string name="capture_the_MRZ" translatable="false">1. Capture The Mrz Code Of Your Id Document\N2. Scan Your Identity Document By Holding Your\N&#160;&#160;&#160;&#160;Smart Device Against It\N3. Scan Your Face For Comparison With Your Id\N&#160;&#160;&#160;&#160;Document Photo</string>
    <string name="hint_recovery_code">Recovery Code</string>
    <string name="prompt_certificate_profile_sync">Synchronize Certificate</string>
    <string name="result_certificate_has_been_activated">Your Certificate Has Been Synchronized Successfully</string>
    <string name="promt_you_need_your_recovery">You Need Your Recovery Code If You\N   \U2022 Forget Your Pin Code\N   \U2022 Change The\N   \U2022 Change Your Account Configuration\N\Nplease Send The Recovery Code To Your Mobile Or Write It Down And Keep It In A Safe Place.\Nplease Protect Your Mobile Device So That The Link And Recovery Code Will Not Be Accessed By Anybody Else.</string>
    <string name="prompt_activate_create_recovery_code_text_1">Your Recovery Code Is</string>
    <string name="button_agree">Agree</string>
    <string name="button_disagree">Disagree</string>
    <string name="button_resend">Resend Activation Code</string>
    <string name="failed">Failed!</string>
    <string name="success">Success!</string>
    <string name="result_activation_code_sent">Your Activation Code Has Been Sent</string>
    <string name="wrong_active">Wrong Activation Code. You Have Remaining [Text] Times To Attempt.</string>
    <string name="close">Close</string>
    <string name="prompt_choose_auth_method">Authentication Method</string>
    <string name="button_identification_chipless">Non-Chip Identification Card</string>
    <string name="button_identification_chip">Chip Identification Card</string>
    <string name="prompt_info_step2">Capture The Sides Of Identification Card</string>
    <string name="spinner_document_type_citizen_id_card">Citizen Id Card</string>
    <string name="prompt_pin_description_setting_confirm_new_pin">Confirm New Pin</string>
    <string name="prompt_sendcapture_frontend">Front Side Of Identity Card</string>
    <string name="prompt_front_side">Front Side</string>
    <string name="prompt_back_side">Back Side</string>
    <string name="face_not_rec" translatable="false">Face Not Recognized</string>
    <string name="try_again" translatable="false">Try Again</string>
    <string name="try_face_id" translatable="false">Try Face Id Again</string>
    <string name="button_cancel">Cancel</string>
    <string name="signing_tes" translatable="false">Signing Tester</string>
    <string name="submitted_bold" translatable="false">Submitted From <b>Signing Tester</b></string>
    <string name="certificate_info">Details</string>
    <string name="prompt_sign_at">Performed At</string>
    <string name="ri_os">Operating System</string>
    <string name="ri_ip">Ip Address</string>
    <string name="ri_browser">Browser</string>
    <string name="ri_rp_name">Rp</string>
    <string name="windows_10" translatable="false">Windows 10</string>
    <string name="ip" translatable="false">192.168.3.14</string>
    <string name="chrome_107_" translatable="false">Chrome 107.0</string>
    <string name="backoffice_" translatable="false">Backoffice_Rp</string>
    <string name="eSign" translatable="false">Esign</string>
    <string name="prompt_request_info_confirmed">Confirmed</string>
    <string name="unlimited" translatable="false">Unlimited</string>
    <string name="tenk_signed_pr" translatable="false">10K Signed Profile</string>
    <string name="ten_signed_prof" translatable="false">10 Signed Profile</string>
    <string name="five_signed_prof" translatable="false">5 Signed Profile</string>
    <string name="signing_counter" translatable="false">Signing Counter</string>
</resources>