<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="269dp"
    android:layout_height="251dp"
    android:background="@drawable/corner"
    android:backgroundTint="@color/black"
    android:gravity="center_horizontal|center"
    android:orientation="vertical">


    <ImageView
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:src="@drawable/faceid_1" />

    <TextView
        android:layout_width="238dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/sfpro_medium"
        android:gravity="center_horizontal|top"
        android:text="@string/face_not_rec"
        android:textColor="@color/white"
        android:textSize="17dp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="238dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/sfpro_medium"
        android:gravity="center_horizontal|top"
        android:text="@string/try_again"
        android:textColor="@color/white"
        android:textSize="13dp" />

    <TextView
        android:layout_width="139dp"
        android:layout_height="22dp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/try_face_id"
        android:textColor="@color/text_blue"
        android:textStyle="bold" />

    <TextView

        android:layout_width="139dp"
        android:layout_height="22dp"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:text="@string/button_cancel"
        android:textColor="@color/text_blue" />

</LinearLayout>