<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_perform"
            android:layout_width="123.96dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/atb_digital_medium"
            android:gravity="top"
            android:text="@string/prompt_sign_at"
            android:textColor="@color/white"
            android:textSize="17dp" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:src="@drawable/line_dotted" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_operating"
                android:layout_width="123.96dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/atb_digital_regular"
                android:gravity="start"
                android:text="@string/ri_os"
                android:textColor="@color/white"
                android:textSize="12dp" />

            <TextView
                android:id="@+id/tv_operating_detail"
                android:layout_width="225dp"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:fontFamily="@font/atb_digital_medium"
                android:gravity="end"
                android:text="@string/windows_10"
                android:textColor="@color/white"
                android:textSize="12dp" />


        </LinearLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:src="@drawable/line_dotted" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_ip"
                android:layout_width="123.96dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/atb_digital_regular"
                android:gravity="start"
                android:text="@string/ri_ip"
                android:textColor="@color/white"
                android:textSize="12dp" />

            <TextView
                android:id="@+id/tv_ip_detail"
                android:layout_width="225dp"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:fontFamily="@font/atb_digital_medium"
                android:gravity="end"
                android:text="@string/ip"
                android:textColor="@color/white"
                android:textSize="12dp" />


        </LinearLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:src="@drawable/line_dotted" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_browser"
                android:layout_width="123.96dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/atb_digital_regular"
                android:gravity="start"
                android:text="@string/ri_browser"
                android:textColor="@color/white"
                android:textSize="12dp" />

            <TextView
                android:id="@+id/tv_browser_detail"
                android:layout_width="225dp"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:fontFamily="@font/atb_digital_medium"
                android:gravity="end"
                android:text="@string/chrome_107_"
                android:textColor="@color/white"
                android:textSize="12dp" />
        </LinearLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:src="@drawable/line_dotted" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_rp"
                android:layout_width="123.96dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/atb_digital_regular"
                android:gravity="start"
                android:text="@string/ri_rp_name"
                android:textColor="@color/white"
                android:textSize="12dp" />

            <TextView
                android:id="@+id/tv_rp_detail"
                android:layout_width="225dp"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:fontFamily="@font/atb_digital_medium"
                android:gravity="end"
                android:text="@string/backoffice_"
                android:textColor="@color/white"
                android:textSize="12dp" />
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>