<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.Activity_inbox_detail_submit">

    <ImageView
        android:id="@+id/imageView13"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/bg_1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView10"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/rectangle_home_page"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/textView11"
        android:layout_width="61.15dp"
        android:layout_height="30dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="23dp"
        android:background="@drawable/corner_inbox_detail"
        android:fontFamily="@font/inter_medium"
        android:gravity="center_horizontal|center"
        android:text="@string/eSign"
        android:textColor="@color/blue_text"
        android:textSize="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/btn_Detail"
        android:layout_width="61.15dp"
        android:layout_height="30dp"
        android:layout_marginTop="23dp"
        android:layout_marginEnd="26.85dp"
        android:background="@drawable/corner_inbox_detail"
        android:fontFamily="@font/inter_medium"
        android:gravity="center_horizontal|center"
        android:text="@string/certificate_info"
        android:textColor="@color/blue_text"
        android:textSize="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <ImageView
        android:id="@+id/textView14"
        android:layout_width="116dp"
        android:layout_height="58dp"
        android:layout_marginStart="137dp"
        android:layout_marginTop="9dp"
        android:layout_marginEnd="137dp"
        android:fontFamily="@font/inter_medium"
        android:gravity="center_horizontal|top"
        android:src="@drawable/logo_blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="67dp"
        android:background="@drawable/corner_card"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="51dp"
            android:fontFamily="@font/inter_medium"
            android:gravity="center"
            android:text="@string/submitted_bold"
            android:textColor="@color/white"
            android:textSize="17dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:fontFamily="@font/inter_medium"
            android:gravity="center"
            android:text="@string/signing_tes"
            android:textColor="@color/white"
            android:textSize="15dp"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="62dp"
            android:src="@drawable/success" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/inter_medium"
            android:text="@string/prompt_request_info_confirmed"
            android:textColor="@color/white"
            android:textSize="18dp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="62dp"
            android:orientation="vertical"
            android:paddingStart="20dp"
            android:paddingEnd="20dp">

            <TextView
                android:id="@+id/tv_perform"
                android:layout_width="123.96dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter_medium"
                android:gravity="top"
                android:text="@string/prompt_sign_at"

                android:textColor="@color/white"
                android:textSize="15dp" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:src="@drawable/line_dotted" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_operating"
                    android:layout_width="123.96dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/inter_light"
                    android:gravity="start"
                    android:text="@string/ri_os"
                    android:textColor="@color/white"
                    android:textSize="12dp" />

                <TextView
                    android:id="@+id/tv_operating_detail"
                    android:layout_width="225dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:fontFamily="@font/inter_medium"
                    android:gravity="end"
                    android:text="@string/windows_10"
                    android:textColor="@color/white"
                    android:textSize="12dp" />


            </LinearLayout>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:src="@drawable/line_dotted" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_ip"
                    android:layout_width="123.96dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/inter_light"
                    android:gravity="start"
                    android:text="@string/ri_ip"
                    android:textColor="@color/white"
                    android:textSize="12dp" />

                <TextView
                    android:id="@+id/tv_ip_detail"
                    android:layout_width="225dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:fontFamily="@font/inter_medium"
                    android:gravity="end"
                    android:text="@string/ip"
                    android:textColor="@color/white"
                    android:textSize="12dp" />


            </LinearLayout>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:src="@drawable/line_dotted" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_browser"
                    android:layout_width="123.96dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/inter_light"
                    android:gravity="start"
                    android:text="@string/ri_browser"
                    android:textColor="@color/white"
                    android:textSize="12dp" />

                <TextView
                    android:id="@+id/tv_browser_detail"
                    android:layout_width="225dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:fontFamily="@font/inter_medium"
                    android:gravity="end"
                    android:text="@string/chrome_107_"
                    android:textColor="@color/white"
                    android:textSize="12dp" />
            </LinearLayout>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:src="@drawable/line_dotted" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_rp"
                    android:layout_width="123.96dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/inter_light"
                    android:gravity="start"
                    android:text="@string/ri_rp_name"
                    android:textColor="@color/white"
                    android:textSize="12dp" />

                <TextView
                    android:id="@+id/tv_rp_detail"
                    android:layout_width="225dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:fontFamily="@font/inter_medium"
                    android:gravity="end"
                    android:text="@string/backoffice_"
                    android:textColor="@color/white"
                    android:textSize="12dp" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>