<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/bottom_sheet_signing_counter"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_weight="10"
        android:background="@drawable/bg_rounded"
        android:fontFamily="@font/inter_bold"
        android:gravity="center_horizontal"
        android:padding="10dp"
        android:text="@string/signing_counter"
        android:textColor="@color/white"
        android:textSize="15dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical"
        android:paddingBottom="20dp">

        <TextView
            android:id="@+id/unlimited"
            android:layout_width="370dp"
            android:layout_height="21dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="7dp"
            android:fontFamily="@font/inter_bold"
            android:text="@string/unlimited"
            android:textColor="@color/text_blue"
            android:textSize="15dp" />

        <ImageView
            android:layout_width="370dp"
            android:layout_height="2dp"
            android:layout_marginStart="20dp"
            android:layout_marginBottom="6dp"
            android:src="@drawable/line_3" />

        <TextView
            android:id="@+id/tenk_signed_profile"
            android:layout_width="370dp"
            android:layout_height="21dp"
            android:layout_marginStart="20dp"
            android:layout_marginBottom="7dp"
            android:fontFamily="@font/inter_bold"
            android:text="@string/tenk_signed_pr"
            android:textColor="@color/text_blue"
            android:textSize="15dp" />

        <ImageView
            android:layout_width="370dp"
            android:layout_height="2dp"
            android:layout_marginStart="20dp"
            android:layout_marginBottom="6dp"
            android:src="@drawable/line_3" />

        <TextView
            android:id="@+id/ten_signed_profile"
            android:layout_width="370dp"
            android:layout_height="21dp"
            android:layout_marginStart="20dp"
            android:layout_marginBottom="7dp"
            android:fontFamily="@font/inter_bold"
            android:text="@string/ten_signed_prof"
            android:textColor="@color/text_blue"
            android:textSize="15dp" />

        <ImageView
            android:layout_width="370dp"
            android:layout_height="2dp"
            android:layout_marginStart="20dp"
            android:layout_marginBottom="6dp"
            android:src="@drawable/line_3" />

        <TextView
            android:id="@+id/five_signed_profile"
            android:layout_width="370dp"
            android:layout_height="21dp"
            android:layout_marginStart="20dp"
            android:layout_marginBottom="7dp"
            android:fontFamily="@font/inter_bold"
            android:text="@string/five_signed_prof"
            android:textColor="@color/text_blue"
            android:textSize="15dp" />
    </LinearLayout>
</LinearLayout>